# troperust

./: Cargo.toml
migrations/: 20220311042422_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: get_response.rs  health_check.rs
